--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.14.2/d3.js"></script>
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
   <script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
-  <script src="data/GR_spawning.js"></script>
+  <script src="data/PD_network.js"></script>
   <script>
 
     var windowWidth = $(window).width();
@@ -492,7 +492,7 @@
     const edges = data.links;
 
 
-    const extent = d3.extent(nodes.map(d => +d.source_strength))
+    const extent = d3.extent(nodes.map(d => +d.out_strength))
     const sizeScale = d3.scaleLinear().domain(extent).range([5, 15]);
 
     $("#minCircleVal").html(extent[0].toFixed(5));
@@ -683,8 +683,8 @@
             'longitude': +row.longitude,
             'latitude': +row.latitude,
             'name': row.L2_group_name,
-            'source': +row.source_strength,
-            'sink': +row.sink_strength,
+            'source': +row.out_strength,
+            'sink': +row.in_strength,
             'id': +row.id
           },
           'geometry': {
