Minor changes to explanations

--- a/index.html
+++ b/index.html
@@ -445,16 +445,15 @@
       </span>
       <h1 id='title'>Coral dispersal network</h1>
       <div class="instruction itemWrapper" id="instruction">
-        <p class="item">Click on a node to see more information, hover over a node to see connected edges. <br><br>
-          Circle
-          sizes are proportional to
-          <span><b>source strength</b></span> while line thinkness are proportional to weight.
+        <p class="item">This dispersal network is based on simulations by SECoW for <i>Platygyra daedalea</i>. <br><br>
+          Click on a reef to see more information, or hover over a reef to see outbound larval connections. <br><br>
+          Circle sizes are proportional to <span><b>out-strength</b></span> (likelihood of larvae settling anywhere) while line thinkness are proportional to the strength of outbound connections.
         </p>
         <p>Toggle here to set parameter to scale circle size:</p>
       </div>
       <br>
       <div class='itemWrapper'>
-        <p> Source strength </p>
+        <p> Out-strength </p>
       </div>
       <div id="circleSizes">
         <img id="minCircle" class='item' src="./img/legend.svg" />
