--- a/index.html
+++ b/index.html
@@ -445,11 +445,10 @@
       </span>
       <h1 id='title'>Coral connectivity in the southwest Indian Ocean</h1>
       <div class="instruction itemWrapper" id="instruction">
-        <p class="item">This dispersal network is based on simulations by SECoW for <i>Platygyra daedalea</i>. <br><br>
+        <p class="item">This dispersal network is based on SECoW simulations for <i>Platygyra daedalea</i>. <br><br>
           Click on a reef to see more information, or hover over a reef to see outbound larval connections. <br><br>
-          Circle sizes are proportional to <span><b>out-strength</b></span> (likelihood of larvae settling anywhere) while line thinkness are proportional to the strength of outbound connections.
+          Circle sizes are proportional to <span><b>out-strength</b></span> (the likelihood of larvae settling anywhere). Line thickness is proportional to the strength of individual outbound connections.
         </p>
-        <p>Toggle here to set parameter to scale circle size:</p>
       </div>
       <br>
       <div class='itemWrapper'>
