--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
       <div class="instruction itemWrapper" id="instruction">
         <p class="item">This dispersal network is based on SECoW simulations for <i>Platygyra daedalea</i>. <br><br>
           Click on a reef to see more information, or hover over a reef to see outbound larval connections. <br><br>
-          Circle sizes are proportional to <span><b>out-strength</b></span> (the likelihood of larvae settling anywhere). Line thickness is proportional to the strength of individual outbound connections.
+          Circle sizes are proportional to <span><b>out-strength</b></span> (the likelihood of larvae settling anywhere). Line thicknesses are proportional to the strength of individual outbound connections.
         </p>
       </div>
       <br>
