--- a/coral_app.html
+++ b/coral_app.html
@@ -462,20 +462,16 @@
       <h1 id='title'>Coral connectivity in the southwest Indian Ocean</h1>
       <div class="instruction itemWrapper" id="instruction">
         <p class="item">This dispersal network is based on SECoW simulations for <i>Platygyra daedalea</i>, a type of brain coral. <br><br>
-          Click on a reef to see more information, or hover over a reef to see outbound larval connections. <br><br>
-          Circle sizes are proportional to <span><b>out-strength</b></span> (the likelihood of larvae settling anywhere). Line thicknesses are proportional to the strength of individual outbound connections.
+          Click on a reef to see more information, or hover over a reef to see outbound larval connections. Line thicknesses are proportional to the strength of individual outbound connections, and circle size is proportional to out-strength. <br><br>
+          <span><b>Out-strength:</b></span> the likelihood of virtual larvae settling anywhere. <br><br>
+          <span><b>In-strength:</b></span> the ratio between incoming and outgoing virtual larvae. <br><br>
+          <span><b>Out-entropy:</b></span> The diversity of larval destinations from a site. <br><br>
+          <span><b>In-entropy:</b></span> The diversity of larval sources for a site. <br><br>
+          <span><b>Out-consistency:</b></span> The proportion of spawning events accounting for half of outbound settling larvae. <br><br>
+          <span><b>In-consistency:</b></span> The proportion of spawning events accounting for half of inbound settling larvae. <br><br>
+          Reefs with high out-strength, out-entropy, and out-consistency may play an important role in maintaining regional reef resilience. Reefs with high in-strength, in-entropy, and in-consistency may have greater recovery potential.
         </p>
-      </div>
-      <br>
-      <div class='itemWrapper'>
-        <p> Out-strength </p>
-      </div>
-      <div id="circleSizes">
-        <img id="minCircle" class='item' src="./coral_data/img/legend.svg" />
-        <p id="minCircleVal" class='item'></p>
-        <img id="maxCircle" class='item' src="./coral_data/img/legend.svg" />
-        <p id="maxCircleVal" class='item'></p>
-      </div>
+      </div>  
     </div>
   </div>
   <div id='acknowledgements'>
