--- a/coral_app.html
+++ b/coral_app.html
@@ -142,16 +142,15 @@
     #acknowledgements {
       position: absolute;
       width: 600px;
-      margin: 10px;
+      margin: 15px;
       padding: 5px 5px 5px 8px;
       background-color: #F0F0F1;
       border-radius: 5px;
       z-index: 15;
       transition: 0.3s ease-in-out;
-      box-shadow: 0 1px 1px 0 rgba(66, 66, 66, 0.08), 0 1px 3px 1px rgba(66, 66, 66, 0.16);
       opacity: 0.5;
       bottom: 0;
-      left: 0;
+      right: 0;
       font-size: 75%;
     }
 
